--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
     "babel-plugin-import": "^1.8.0",
     "less": "^3.8.1",
     "less-loader": "^4.1.0",
+    "react-app-rewire-less": "^2.1.2",
     "react-app-rewired": "^1.5.2"
   },
   "jest": {
