--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "babel-runtime": "6.26.0",
     "case-sensitive-paths-webpack-plugin": "2.1.1",
     "chalk": "1.1.3",
+    "cos-js-sdk-v5": "^0.4.13",
+    "cos-nodejs-sdk-v5": "^2.4.9",
     "css-loader": "0.28.7",
     "dotenv": "4.0.0",
     "dotenv-expand": "4.2.0",
