--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "download-page",
   "version": "0.1.0",
   "private": true,
+  "homepage": ".",
   "dependencies": {
     "antd": "^3.8.0",
     "autoprefixer": "7.1.6",
